packages/kyvernoPolicies/chart/tests/mpol/add-default-capability-drop-cel/kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-default-capability-drop-cel
policies:
- ../policy.yaml
resources:
- resource.yaml
results:
- policy: add-default-capability-drop-cel
  resources:
  - bare-pod
  - partial-pod
  - full-pod
  - init-pod
  - ephemeral-pod
  patchedResources: patched.yaml
  kind: Pod
  result: pass
- policy: add-default-capability-drop-cel
  resources:
  - bare-deployment
  patchedResources: patched.yaml
  kind: Deployment
  result: pass
- policy: add-default-capability-drop-cel
  resources:
  - bare-replicaset
  patchedResources: patched.yaml
  kind: ReplicaSet
  result: pass
- policy: add-default-capability-drop-cel
  resources:
  - bare-daemonset
  patchedResources: patched.yaml
  kind: DaemonSet
  result: pass
- policy: add-default-capability-drop-cel
  resources:
  - bare-statefulset
  patchedResources: patched.yaml
  kind: StatefulSet
  result: pass
